--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {"no-unused-vars": ["error", { "vars": "all", "args": "none", "ignoreRestSiblings": false }]}
   },
   "browserslist": [
     "> 1%",
